[build-system]
requires = ["setuptools>=83.0.0", "wheel", "pybind11>=3.0.4", "numpy>=2.4.6"]
build-backend = "setuptools.build_meta"

[project]
name = "cffview"
version = "0.1.0"
description = "A Python CLI tool to inspect Ansys Fluent .cas.h5/.msh.h5 files without opening Fluent"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11"
authors = [{ name = "preamer", email = "1524477126@qq.com" }]
keywords = ["fluent", "cfd", "ansys", "hdf5", "mesh"]
classifiers = [
    "License :: OSI Approved :: BSD Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Environment :: Console",
]
dependencies = [
    "h5py>=3.16.0",
    "pyvista>=0.48.4",
    "sexpdata>=1.0.2",
    "tqdm>=4.68.3",
]

[project.scripts]
cffview = "cffview.main:main"

[project.urls]
Repository = "https://github.com/preamer/cffview"

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux*"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = "dnf install -y epel-release && dnf install -y hdf5-devel pkgconf-pkg-config"
environment = { HDF5_DIR = "/usr" }
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-all = "brew install hdf5"
environment = { HDF5_DIR = "/opt/homebrew/opt/hdf5:/usr/local/opt/hdf5" }
before-build = "export HDF5_DIR=$(brew --prefix hdf5)"
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
before-all = "vcpkg install hdf5:x64-windows"
before-build = "pip install delvewheel"
environment = { HDF5_DIR = "C:/vcpkg/installed/x64-windows" }
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
