[build-system]
requires = ["setuptools>=83.0.0", "wheel", "pybind11>=3.0.4", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cffview"
version = "0.1.0"
description = "A Python CLI tool to inspect Ansys Fluent .cas.h5/.msh.h5 files without opening Fluent"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11"
authors = [{ name = "preamer", email = "1524477126@qq.com" }]
keywords = ["fluent", "cfd", "ansys", "hdf5", "mesh"]
classifiers = [
    "License :: OSI Approved :: BSD Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Environment :: Console",
]
dependencies = [
    "h5py>=3.16.0",
    "pyvista>=0.48.4",
    "sexpdata>=1.0.2",
    "tqdm>=4.68.3",
]

[project.scripts]
cffview = "cffview.main:main"

[project.urls]
Repository = "https://github.com/preamer/cffview"

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
skip = ["*-win32", "*-musllinux*", "*-manylinux_i686"]

[tool.cibuildwheel.linux]
before-all = "bash tools/build_hdf5_linux.sh"
environment = { HDF5_DIR = "/opt/hdf5", PIP_ONLY_BINARY = ":all:" }

[tool.cibuildwheel.macos]
environment = { HDF5_DIR = "/tmp/hdf5", MACOSX_DEPLOYMENT_TARGET = "11.0", DYLD_LIBRARY_PATH = "/tmp/hdf5/lib", CC = "clang", CXX = "clang++" }
before-all = "bash tools/build_hdf5_macos.sh"

[tool.cibuildwheel.windows]
before-all = "powershell tools/build_hdf5_windows.ps1"
environment = { HDF5_DIR = "C:/Users/runneradmin/hdf5" }
repair-wheel-command = "delvewheel repair --add-path C:\\Users\\runneradmin\\hdf5\\bin -w {dest_dir} {wheel}"
