[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cffview"
version = "0.2.2"
description = "A Python CLI tool to inspect Ansys Fluent .cas.h5/.msh.h5 files without opening Fluent"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "preamer", email = "1524477126@qq.com" }]
keywords = ["fluent", "cfd", "ansys", "hdf5", "mesh"]
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Environment :: Console",
]
dependencies = ["h5py>=3.16.0", "pyvista>=0.48.4", "sexpdata>=1.0.2"]

[project.scripts]
cffview = "cffview.main:main"

[project.urls]
Repository = "https://github.com/preamer/cffview"

[tool.setuptools.packages.find]
where = ["src"]
